# ILAMB

./: .gitignore  LICENSE.rst  README.md  README.rst  azure-pipelines.yml  contents.json  ilamb-sysmpi.yml  ilamb.yml  makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi.yaml  pypi.yml
cmec-driver/: cfg_to_json.py  cmip.json  cmip.sh  custom_config.json  custom_config.sh  diurnal.json  diurnal.sh  forcings.json  forcings.sh  ilamb.json  ilamb.sh  iomb.json  iomb.sh  parse_config.py  sample.json  sample.sh
demo/: clm.cfg  cmip5.cfg  driver.py  example.py  ilamb.cfg  iomb.cfg  models.py  multimodelmean.py  ocean.cfg  oceans.txt  sample.cfg  table.py
demo/ipynb/: Tutorial1.ipynb
doc/: Makefile  PACKAGEAPI.rst  TUTORIAL.rst  add_data.rst  add_model.rst  conf.py  confront.rst  custom_regions.rst  first_steps.rst  ilamb_doctor.rst  ilamb_fetch.rst  ilamb_run.rst  index.rst  install.rst  overview.rst  packageapi.rst  running_iomb.rst  tutorial.rst
src/ILAMB/: CO2MaunaLoa.py  ConfALT.py  ConfAlbedo.py  ConfBasin.py  ConfBurntArea.py  ConfCO2.py  ConfContentChange.py  ConfDepthGradient.py  ConfDiurnal.py  ConfDrainage.py  ConfEvapFraction.py  ConfGSNF.py  ConfIOMB.py  ConfNBP.py  ConfPermafrost.py  ConfRatio.py  ConfRunoff.py  ConfSWE.py  ConfSoilCarbon.py  ConfSoilMoisture.py  ConfTWSA.py  ConfUSGS.py  (+23 more)
test/: makefile  score_diff.py  scores_test.csv.gold  test.cfg  test_SoilMoisture.py  test_Variable.py  test_confrontation.py  test_models.py  test_partial_corr_tensor.py  test_trend_tensor.py
util/: create_quantile_database.py
(+7 files in other folders)
